--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -422,6 +422,7 @@ input[type="search"],
 input[type="password"],
 input[type="email"],
 input[type="datetime"],
+input[type="datetime-local"],
 input[type="date"],
 input[type="url"],
 textarea,select{
@@ -446,6 +447,7 @@ input[type="search"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
 input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
 input[type="date"]:focus,
 input[type="url"]:focus,
 textarea:focus,
