--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dashboard</title>
+	<!-- <title>Dashboard</title> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
 			</div>
 			<div class="top-info column">
 				<div class="containt top-info-box shadow half delay" style="background: #68baf9;">
-					<div class="size-std icon-info"><img src="<%= baseurl() %>images/icon/user-white.png"></div>
+					<div class="size-std icon-info"><img src="<%= baseurl() %>images/icon/service.png"></div>
 					<div class="field-info">
 						<p class="nopad size-head4"><b>Anything to show</b></p>
 						<p class="size-head1 nopad">9999</p>
@@ -35,7 +35,7 @@
 					</div>
 				</div>
 				<div class="containt top-info-box shadow half delay" style="background: #ff6d74;">
-					<div class="size-std icon-info"><img src="<%= baseurl() %>images/icon/visitors-white.png"></div>
+					<div class="size-std icon-info"><img src="<%= baseurl() %>images/icon/delivery.png"></div>
 					<div class="field-info">
 						<p class="nopad size-head4"><b>Anything to show</b></p>
 						<p class="size-head1 nopad">100</p>
@@ -93,7 +93,7 @@
 							<tr>
 								<td>
 									<a href="<%= baseurl() %>delivery/Upload">
-										<img src="<%= baseurl() %>images/icon/project.png" alt="Upload Project" style="width: 55%; vertical-align: middle;">
+										<img src="<%= baseurl() %>images/icon/upload-delivery.png" alt="Upload Project" style="width: 55%; vertical-align: middle;">
 										<br><br>
 										<b>Upload Delivery</b>
 									</a>
@@ -106,7 +106,7 @@
 							<tr>
 								<td>
 									<a href="<%= baseurl() %>service/Upload">
-										<img src="<%= baseurl() %>images/icon/project.png" alt="Upload Project" style="width: 55%; vertical-align: middle;">
+										<img src="<%= baseurl() %>images/icon/upload-service.png" alt="Upload Project" style="width: 55%; vertical-align: middle;">
 										<br><br>
 										<b>Upload Service</b>
 									</a>
@@ -121,5 +121,31 @@
 </div>
 </body>
 <% include ./partials/footer %>
+<script>
+	var yourData = [{
+		"value" : "2400",
+		"label" : "Jan"
+	},
+	{
+		"value" : "1800",
+		"label" : "Feb"
+	},
+	{
+		"value" : "788",
+		"label" : "Mar"
+	},
+	{
+		"value" : "877",
+		"label" : "Apr"
+	},
+	{
+		"value" : "1788",
+		"label" : "May"
+	},
+	{
+		"value" : "2500",
+		"label" : "Jun"
+	}];
+</script>
 <script src="<% baseurl() %>js/chart.js" type="text/javascript"></script>
 </html>
