--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- <title>Document</title> -->
     <link rel="stylesheet" href="<%= baseurl() %>css/style.css">
     <link rel="stylesheet" href="<%= baseurl() %>css/mystyle.css">
     <link rel="stylesheet" href="<%= baseurl() %>css/style_button.css">
