--- a/views/detaildelivery.ejs
+++ b/views/detaildelivery.ejs
@@ -159,7 +159,7 @@
                                 <td  class="<%= class_tab %>" align="center"><%= read.no_hp %></td>
                                 <td  class="<%= class_tab %>" align="center"><%= read.id_dealer %></td>
                                 <% if(files[0].type_exceldlv=="0"){ %>
-                                <td class="<%= class_tab %>" align="center"> <a href="<%= baseurl() %>delivery/edit/<%= files[0].id_exceldlv %>/<%= read.id_delivery %>"><img src="<%= baseurl() %>images/icon/pencil-edit.png" alt="Edit" title="Edit" width="18"></a> </td>
+                                <td class="<%= class_tab %>" align="center"> <a href="<%= baseurl() %>delivery/edit/<%= files[0].id_exceldlv %>/<%= read.no_delivery %>"><img src="<%= baseurl() %>images/icon/pencil-edit.png" alt="Edit" title="Edit" width="18"></a> </td>
                                 <% } %>
                             </tr>
                             <% } %>
